--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_common_ffi: any
   path: ^1.9.1
+  flutter_riverpod: ^3.0.1
 
 dev_dependencies:
   flutter_test:
